# rrootage-vita

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  readme_jp.txt
src/: Makefile  SDL_mixer.h  barragemanager.cc  foecommand.h  rr.c  screen.c  screen.h  soundmanager.c
src/bulletml/: bulletmlrunner.h
